- Обновлена работа приложения для соответствия работы тестов